# procmem

./: .gitignore  .pylintrc  Makefile  README.md  flake.nix  mmaptracker.gdb  requirements.txt  setup.cfg  setup.py
procmem/: __init__.py  bytefmt.py  cmd_memwrite.py  cmd_procmem.py  hexdump.py  itertools.py  main_info.py  main_list.py  main_read.py  main_replace.py  main_search.py  main_statm.py  main_watch.py  main_write.py  memory.py  memory_region.py  pack.py  units.py  util.py
tests/: stdio.py  test_main_info.py  test_main_list.py  test_pack.py
